# NiceOS

./: README.md  flake.nix  hardware-configuration.nix  init.nix  todos.md  unsorted.nix
core/: globals.nix  linux_basics.nix
core/scripts/: install.sh  rebuild.sh  scripts-importer.nix
core/templates/: passwords-template.nix  user-configuration-template.nix
desktop/compositor/wayland/niri/: niri-setup.nix
desktop/compositor/wayland/niri/config/: animations.kdl  keybinds.kdl  window-rules.kdl
desktop/display-manager/: cosmic-greeter-setup.nix  gdm-setup.nix  greetd-setup.nix  lemurs-setup.nix  ly-setup.nix  sddm_setup.nix
desktop/lock-screen/: swaylock.nix
desktop/notifications/: notifications.nix
desktop/other/: theming.nix
desktop/other/wayland/: matugen.nix
desktop/wallpaper-manager/: wallpaper.nix
software/gaming/emulation/: game-emulation.nix
software/programming/: chillcube.nix
software/taskcli/: taskcli.nix
software/taskcli/code/: pyproject.toml
software/taskcli/code/src/: __main__.py  lua_runtime.py  parser.py  state_manager.py  tui_app.py
